# MEPAM

./: LICENSE  README.md  Table_S_0611.xlsx  environment.yaml  pyproject.toml
MEPAM_NER/data/: linkml.xlsx  nonlinkml.xlsx
MEPAM_NER/data/2txt/: 2doilist.xlsx
MEPAM_NER/data/manual/: 10.1002elsc.200620902.yaml  10.1002jctb.5433.yaml
MEPAM_NER/scripts/: LinkML.sh  cermine_pdf2csv.py  combine.py  enzyme_noid3.yaml  getjson.py  grobid_pdf2csv.py  index_builder.py  nebula_create.ini  ner_metric.ini  ner_metric.py  parse_metric.py  pdf2txt.ini
MEPAM_QA/: index_builder.sh  nebula_create.py  yaml2nebula_tsv.py  yaml2tsv.ini
MEPAM_QA/vector_store_db/: index_store.json
fig/figure1/: venn图.py  模型评估柱状图.py
fig/figure3/: F1.xlsx  combinefig3b_3c.py  pdf100.xlsx  precision.xlsx  recall.xlsx
fig/figure4/: 微生物对应酶柱状图.py  微生物对酶柱状图.xlsx  微生物球图.xlsx  微生物球图Saccharomyces.tsv  微生物球图Trichoderma.tsv  微生物饼图.py  酶对应微生物柱状图.py  酶对微生物柱状图.xlsx  酶球图Hydrolases.tsv  酶球图Oxidoreductases .tsv  酶饼图.py  酶饼图.xlsx
fig/figure5/: Excel转换csv.py  tsv_id_mapping.py  数字id匹配数据.py  生成催化的edge.py  生成生产的edge.py  纤维素酶produce_ph_temp_edge.xlsx  纤维素酶produce_ph_temp_node.xlsx  纤维素酶produce_培养基_edge.xlsx  纤维素酶produce_培养基_node.xlsx  纤维素酶produce_碳源氮源_edge.xlsx  纤维素酶produce_碳源氮源_node.xlsx  纤维素酶produce其它属性_edge.xlsx  纤维素酶produce其它属性_node.xlsx  纤维素酶催化Avicel_edge.xlsx  纤维素酶催化Avicel_node.xlsx  纤维素酶催化Carboxymethyl cellulose_edge.xlsx  纤维素酶催化Carboxymethyl cellulose_node.xlsx  纤维素酶催化cellulose_edge.xlsx  纤维素酶催化cellulose_node.xlsx  纤维素酶催化lignocellulose_edge.xlsx  纤维素酶催化lignocellulose_node.xlsx
(+20 files in other folders)
