[tool.poetry]
name = "ner-dspy"
version = "0.1.0"
description = "NER using DSPy and LLMs"
authors = ["Marcus Elwin"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dspy-ai = "^2.4.0"
jupyter = "^1.0.0"
jupytext = "^1.16.1"
pydantic = "2.10.0"
python-dotenv = "^1.0.1"
nest-asyncio = "^1.6.0"
devtools = "^0.12.2"
pyyaml = "^6.0.2"
sentence-transformers = "^3.3.0"
scikit-learn = "^1.5.2"
ontogpt = "^1.0.7"
httpx = {extras = ["socks"], version = "^0.27.2"}
llama-index = "^0.12.0"
llama-index-llms-ollama = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = 'primary'